# Mavura

./: .gitignore  Makefile  README.md  pyproject.toml
mavura/: manage.py
mavura/core/: plugin_manager.py
mavura/core/templates/: _base.html
mavura/mavura/: asgi.py  settings.py  urls.py  wsgi.py
mavura/theme/static_src/: package-lock.json
