[project]
name = "mavura"
version = "0.1.0"
description = "Mavura is an open, modular business management platform inspired by Odoo — rebuilt from the ground up for learning, experimentation, and innovation. It’s designed to help developers understand the inner workings of modern ERP systems while providing a flexible foundation for real-world applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.7",
    "django-components>=0.142.2",
    "django-htmx>=1.26.0",
    "django-split-settings>=1.3.2",
    "django-tailwind[reload]>=4.2.0",
    "djangorestframework>=3.16.1",
]
